<resources>
    <string name="title_test_history_main">Test History</string>
    <string name="title_test_history_details">Test Details</string>
    <string name="tab_text_1">Results</string>
    <string name="tab_text_2">Entered Data</string>
    <string name="tab_text_3">Status</string>
    <string name="action_title_select">Select</string>
    <string name="action_title_select_all">Select All</string>
    <string name="action_title_select_none">Select None</string>
    <string name="action_title_mark_unsent">Mark as Unsent</string>
    <string name="action_title_delete">Delete</string>
    <string name="action_title_mark_sent">Mark as Sent</string>
    <string name="action_title_print">Print</string>
    <string name="form_search_title">Search</string>
    <string name="form_sort_title">Sort</string>
    <string name="operator">Operator</string>
    <string name="operator_short">Op</string>
    <string name="patientId">Patient Id</string>
    <string name="reader_sn">Reader</string>
    <string name="cardlot">Card Lot</string>
    <string name="test_date">Test Date</string>
    <string name="test_date_range">Test Date Range</string>
    <string name="test_date_from">Test Date From</string>
    <string name="test_date_to">Test Date To</string>
    <string name="test_type">Test Type</string>
    <string name="fluid_lot">Fluid Lot</string>
    <string name="no_search_result">No Results Found.</string>
    <string name="search_result_header">%1$d Search Results Found</string>
    <!-- NOTE: Make hint text a bit smaller than normal 18sp by specifying the font size -->
    <string name="search_hint"><font size="16">Search Pat ID, Op ID, etc</font></string>
    <string name="search_hint_qa"><font size="16">Search Lot #, Op ID, Comments, etc</font></string>
    <string name="analyte_reference_range_title">Reference Range</string>
    <string name="analyte_critical_range_title">Critical Range</string>
    <string name="analyte_reportable_range_title">Reportable Range</string>
    <string name="unknown_test_status">No record found.</string>
    <string name="range_list_not_found">No record found.</string>
    <string name="passed">Passed</string>
    <string name="failed">Failed</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="lastweek">Last Week</string>
    <string name="older">Older</string>
    <string name="unknown_date">Unknown Date</string>
    <string name="error_action_title">Error</string>
    <string name="error_action_delete">Could not delete Tests.</string>
    <string name="overview">Overview</string>
    <string name="datetime_sample">Apr 5, 2019 12:30pm</string>
    <string name="sent">Sent</string>
    <string name="unsent">Unsent</string>
    <string name="test_rejected">Test rejected by user</string>
    <string name="action_delete_confirmation">Delete %1$d selected tests?</string>
    <string name="test_error_code">Test has an error: code=%1$d</string>
    <!-- formatted string with placeholder %1$s means 1st position; decimal type -->
    <string name="no_of_selected_items">%1$d Selected</string>
    <string name="related_test_status_category_qc">Related QC Test</string>
    <string name="related_test_status_category_cv">Related CV Test</string>
    <string name="related_test_status_category_eqc">Related Electronic QC</string>
    <string name="related_test_status_category_tqc">Related Thermal QA</string>
    <string name="related_test_status_category_device_info">Device Status</string>
    <string name="related_test_status_category_reference_range">Reference Ranges</string>
    <string name="related_test_status_category_reportable_range">Reportable Ranges</string>
    <string name="related_test_status_category_critical_range">Critical Ranges</string>
    <string name="unsent_tests">Unsent Tests</string>
    <string name="sent_tests">Sent Tests</string>
    <string name="all_qa_tests">All QA Tests</string>
    <string name="no_patient_id">No Patient ID</string>
    <string name="no_lot_number">No Lot #</string>
    <string-array name="preset_filter_titles">
        <item>All Patient Tests</item>
        <item>@string/unsent_tests</item>
        <item>@string/sent_tests</item>
    </string-array>
    <string-array name="preset_filter_titles_qatest">
        <item>@string/all_qa_tests</item>
        <item>@string/unsent_tests</item>
        <item>@string/sent_tests</item>
    </string-array>
</resources>
