<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/frag_action_select_none"
        android:orderInCategory="1000"
        android:title="@string/action_title_select_none"
        app:showAsAction="never" />
    <item
        android:id="@+id/frag_action_select_all"
        android:orderInCategory="1001"
        android:title="@string/action_title_select_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/frag_action_mark_unsent"
        android:orderInCategory="1002"
        android:title="@string/action_title_mark_unsent"
        app:showAsAction="never" />
    <item
        android:id="@+id/frag_action_mark_sent"
        android:orderInCategory="1003"
        android:title="@string/action_title_mark_sent"
        app:showAsAction="never" />
    <item
        android:id="@+id/frag_action_delete"
        android:orderInCategory="1004"
        android:title="@string/action_title_delete"
        app:showAsAction="never" />
</menu>