<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.epocal.testhistoryfeature.ui.TestHistoryDetailsActivity">
    <item
        android:id="@+id/action_print"
        android:orderInCategory="100"
        android:icon="@drawable/ic_print_white_24dp"
        android:title="@string/action_title_print"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sent"
        android:orderInCategory="102"
        android:icon="@drawable/ic_print_white_24dp"
        android:title="@string/action_title_mark_sent"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_unsent"
        android:orderInCategory="103"
        android:icon="@drawable/ic_print_white_24dp"
        android:title="@string/action_title_mark_unsent"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="104"
        android:icon="@drawable/ic_print_white_24dp"
        android:title="@string/action_title_delete"
        app:showAsAction="never" />
</menu>