<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:text="@string/overview"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tv_datetime"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/datetime_sample"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_op_name"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_sync_state"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/test_rejected"
        android:textColor="@color/colorDarkRed"
        android:textSize="16sp" />

</LinearLayout>